{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 274,
  "lineage": "0ab32696-ef09-d655-506e-5aac0badcb9d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/loadBalancers/AZProj02LoadBalancer/frontendIPConfigurations/azProjectResource-lbfrontend",
                "name": "azProjectResource-lbfrontend",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/publicIPAddresses/azProjectResource-public_ip"
              }
            ],
            "id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/loadBalancers/AZProj02LoadBalancer",
            "location": "westus3",
            "name": "AZProj02LoadBalancer",
            "resource_group_name": "azProjectResource-resources",
            "sku": "Basic",
            "tags": {
              "dept": "Azure Dev Ops",
              "environment": "Production",
              "task": "Image deployment"
            }
          },
          "dependencies": [
            "azurerm_public_ip.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/loadBalancers/AZProj02LoadBalancer/backendAddressPools/azProjectResource-backendpool",
            "loadbalancer_id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/loadBalancers/AZProj02LoadBalancer",
            "name": "azProjectResource-backendpool",
            "resource_group_name": "azProjectResource-resources"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/loadBalancers/AZProj02LoadBalancer/backendAddressPools/azProjectResource-backendpool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/loadBalancers/AZProj02LoadBalancer/frontendIPConfigurations/azProjectResource-lbfrontend",
            "frontend_ip_configuration_name": "azProjectResource-lbfrontend",
            "frontend_port": 80,
            "id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/loadBalancers/AZProj02LoadBalancer/loadBalancingRules/azProjectResource-lbrule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/loadBalancers/AZProj02LoadBalancer",
            "name": "azProjectResource-lbrule",
            "protocol": "Tcp",
            "resource_group_name": "azProjectResource-resources"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/networkInterfaces/azProjectResource-00-nic",
            "internal_domain_name_suffix": "cvsuovps14hudane2wklrqcn4d.phxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "azProjectResource-network",
                "primary": true,
                "private_ip_address": "10.4.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/virtualNetworks/azProjectResource-network/subnets/internal"
              }
            ],
            "location": "westus3",
            "name": "azProjectResource-00-nic",
            "private_ip_address": "10.4.0.5",
            "private_ip_addresses": [
              "10.4.0.5"
            ],
            "resource_group_name": "azProjectResource-resources",
            "tags": {
              "dept": "Azure Dev Ops",
              "environment": "Production",
              "task": "Image deployment"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/networkInterfaces/azProjectResource-01-nic",
            "internal_domain_name_suffix": "cvsuovps14hudane2wklrqcn4d.phxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "azProjectResource-network",
                "primary": true,
                "private_ip_address": "10.4.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/virtualNetworks/azProjectResource-network/subnets/internal"
              }
            ],
            "location": "westus3",
            "name": "azProjectResource-01-nic",
            "private_ip_address": "10.4.0.4",
            "private_ip_addresses": [
              "10.4.0.4"
            ],
            "resource_group_name": "azProjectResource-resources",
            "tags": {
              "dept": "Azure Dev Ops",
              "environment": "Production",
              "task": "Image deployment"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/loadBalancers/AZProj02LoadBalancer/backendAddressPools/azProjectResource-backendpool",
            "id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/networkInterfaces/azProjectResource-00-nic/ipConfigurations/azProjectResource-network|/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/loadBalancers/AZProj02LoadBalancer/backendAddressPools/azProjectResource-backendpool",
            "ip_configuration_name": "azProjectResource-network",
            "network_interface_id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/networkInterfaces/azProjectResource-00-nic"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/loadBalancers/AZProj02LoadBalancer/backendAddressPools/azProjectResource-backendpool",
            "id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/networkInterfaces/azProjectResource-01-nic/ipConfigurations/azProjectResource-network|/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/loadBalancers/AZProj02LoadBalancer/backendAddressPools/azProjectResource-backendpool",
            "ip_configuration_name": "azProjectResource-network",
            "network_interface_id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/networkInterfaces/azProjectResource-01-nic"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/networkInterfaces/azProjectResource-00-nic|/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/networkSecurityGroups/azProjectResource-nsg",
            "network_interface_id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/networkInterfaces/azProjectResource-00-nic",
            "network_security_group_id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/networkSecurityGroups/azProjectResource-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.main",
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/networkInterfaces/azProjectResource-01-nic|/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/networkSecurityGroups/azProjectResource-nsg",
            "network_interface_id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/networkInterfaces/azProjectResource-01-nic",
            "network_security_group_id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/networkSecurityGroups/azProjectResource-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.main",
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/networkSecurityGroups/azProjectResource-nsg",
            "location": "westus3",
            "name": "azProjectResource-nsg",
            "resource_group_name": "azProjectResource-resources",
            "security_rule": [],
            "tags": {
              "dept": "Azure Dev Ops",
              "environment": "Production",
              "task": "Image deployment"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "blockinternet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/networkSecurityGroups/azProjectResource-nsg/securityRules/BlockAllInternet",
            "name": "BlockAllInternet",
            "network_security_group_name": "azProjectResource-nsg",
            "priority": 130,
            "protocol": "*",
            "resource_group_name": "azProjectResource-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.4.0.0/16",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/networkSecurityGroups/azProjectResource-nsg/securityRules/AllowTrafficWithinVNET",
            "name": "AllowTrafficWithinVNET",
            "network_security_group_name": "azProjectResource-nsg",
            "priority": 120,
            "protocol": "TCP",
            "resource_group_name": "azProjectResource-resources",
            "source_address_prefix": "10.4.0.0/16",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/publicIPAddresses/azProjectResource-public_ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.106.88.26",
            "ip_version": "IPv4",
            "location": "westus3",
            "name": "azProjectResource-public_ip",
            "resource_group_name": "azProjectResource-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "dept": "Azure Dev Ops",
              "environment": "Production",
              "task": "Image deployment"
            }
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.4.0.0/24",
            "address_prefixes": [
              "10.4.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/virtualNetworks/azProjectResource-network/subnets/internal",
            "name": "internal",
            "resource_group_name": "azProjectResource-resources",
            "virtual_network_name": "azProjectResource-network"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.4.0.0/22"
            ],
            "guid": "55476515-dff2-418f-81a4-e594b8c04df3",
            "id": "/subscriptions/cf55404c-25bc-4a39-9ed2-35f521160e12/resourceGroups/azProjectResource-resources/providers/Microsoft.Network/virtualNetworks/azProjectResource-network",
            "location": "westus3",
            "name": "azProjectResource-network",
            "resource_group_name": "azProjectResource-resources",
            "tags": {
              "dept": "Azure Dev Ops",
              "environment": "Production",
              "task": "Image deployment"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}